# procon2023-docs

./: 404.html  CHANGELOG.md  README.md  demo.webm  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
docs/: index.md
docs/game-client/: 0-index.md  1-ui.md  2-test-mode.md  3-real-mode.md  4-server-config.md  open-config.webm  real-play.webm
docs/game-server/: 0-index.md  1-techs.md  3-guide.md
docs/intro/: 0-index.md  1-how-to-play.md  2-craftsmen.md  3-wall-teritories.md  4-scores.md  5-game-progress.md  6-winner.md
game-client/: 0-index.html  1-ui.html  2-test-mode.html  3-real-mode.html  4-server-config.html  load-game.webm
game-server/: 0-index.html  1-techs.html  3-guide.html
intro/: 0-index.html  1-how-to-play.html  2-craftsmen.html  3-wall-teritories.html  4-scores.html  5-game-progress.html  6-winner.html
search/: search_index.js  search_index.json
