[tool.poetry]
name = "procon2023-docs"
version = "0.1.0"
description = ""
authors = ["Kim Minh Thang <thangved02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = {extras = ["imaging"], version = "^9.5.14"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
