[tool.poetry]
name = "procon2023-docs"
version = "0.1.0"
description = ""
authors = ["Kim Minh Thang <thangved02@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = {extras = ["imaging"], version = "^9.5.42"}
mkdocs-git-committers-plugin-2 = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
